<resources>
    <string name="app_name">Preeckle</string>
    <string name="mainTitle">main</string>
    <string name="popularsTitle">populars</string>
    <string name="addPostTitle">Add Post</string>
    <string name="notificationsTitle">notifications</string>
    <string name="followTitle">Follow</string>
    <string name="followingText">following</string>
    <string name="followersText">followers</string>
    <string name="profileTitle">profile</string>
    <string name="followingData">null</string>
    <string name="followersData">null</string>
    <string name="bioProfile">bioProfile</string>
    <string name="profileName">profileName</string>
    <string name="userName">\@userName</string>
    <string name="myTimelineText">My Timeline</string>
    <string name="everythingText">Everything</string>
    <string name="preecklesText">Preeckles</string>
    <string name="midiaText">Midia</string>
    <string name="lovetsText">Lovets</string>
    <string name="directDescription">Direct Button</string>
    <string name="complaintDescription">Complaint Button</string>
    <string name="firstLovetText">first</string>
    <string name="secondLovetText">second</string>
    <string name="thirdLovetText">third</string>
    <string name="inboxTitle">title</string>
    <string name="welcomeBack">Welcome back!</string>
    <string name="emailText">Email</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="passwordText">Password</string>
    <string name="forgotPasswordLogin">Forgot your password?</string>
    <string name="signUpLogin">Don\'t have an account? Sign up</string>
    <string name="signUpSlogan">Yeah, do it!</string>
    <string name="confirmPasswordText">Confirm Password</string>
    <string name="signInHint">Have an account? Sign in</string>
    <string name="completeNameText">Name</string>
    <string name="confirmSetup">Confirm Infos</string>
    <string name="createUserButton">Create User</string>
    <string name="drawUsername">\@</string>
    <string name="usernameText">username</string>
    <string name="loggoutButton">Loggout</string>
    <string name="lovetsTextProfile">lovets</string>
    <string name="preecklesData">preeckles</string>
    <string name="preecklesTextMain">preeckles</string>
    <string name="inboxButton">Message</string>
    <string name="storiesText">Stories</string>
    <string name="addPostTint">What about preeckle something?</string>
    <string name="descriptionPost">usernamePost descriptionPost</string>
    <string name="calendarPost">timeAgo</string>
    <string name="moreActionsPost">...</string>
    <string name="numberNull">null</string>
    <string name="loggoutIcon">X</string>
    <string name="searchField">Search</string>
</resources>
