<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navMain"
        android:enabled="true"
        android:title="@string/mainTitle"
        android:visible="true" />

    <item
        android:id="@+id/navPopulars"
        android:enabled="true"
        android:title="@string/popularsTitle"
        android:visible="true" />

    <item
        android:id="@+id/navNotifications"
        android:checkable="false"
        android:enabled="true"
        android:title="@string/notificationsTitle"
        android:visible="true" />

    <item
        android:id="@+id/navProfile"
        android:checkable="false"
        android:enabled="true"
        android:title="@string/profileTitle"
        android:visible="true" />

</menu>